--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,12 +7,55 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
+  background-color: white;
+  color: black;
   line-height: 1.5;
+  margin: 20px;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+a {
+  color: black;
+  text-decoration: none;
+}
+
+input[type="text"] {
+  padding: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+button {
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.timer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.field {
+  text-align: center;
+}
+
+.value {
+  font-size: 24px;
+  font-weight: bold;
+  color: blue;
+}
+
+.label {
+  font-size: 14px;
+  color: grey;
+}
+
+.alert {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+  display: none;
 }
